# qwen2qwen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: accelerate_deepspeed.yaml  accelerate_fsdp2.yaml  training_10k.yaml  training_config.yaml  training_single_gpu.yaml
docs/baselines/: stsb_baselines.json  stsb_baselines.md
output/: config.yaml
plan/: 01-project-setup-and-configuration.md  02-tokenizer-extension.md  03-encoder-implementation.md  04-decoder-implementation.md  05-combined-seq2seq-model.md  06-weight-initialization.md  07-ul2-data-pipeline.md  08-training-infrastructure.md  09-training-execution.md  10-encoder-extraction.md  11-evaluation.md
scripts/: extract_encoder.py  initialize_model.py  launch_training.sh  quick_eval.py  run_baseline_stsb.py  run_evaluation.py  run_full_training.sh  sanity_check.py  train.py  validation_run.py
src/data/: __init__.py  ul2_collator.py  ul2_torch.py
src/evaluation/: __init__.py  baseline_comparison.py  mteb_eval.py  retrieval_eval.py  similarity_eval.py
src/extraction/: __init__.py  checkpoint_averaging.py  extract_encoder.py  sentence_transformers_export.py
src/qwen3_encdec/: __init__.py  configuration_qwen3_encdec.py  encoder_only.py  modeling_qwen3_decoder.py  modeling_qwen3_encdec.py  modeling_qwen3_encoder.py  tokenization_qwen3_encdec.py  weight_initialization.py
src/qwen3_encdec/configs/: default_config.json
src/training/: __init__.py  config.py  execution.py  memory_utils.py  monitor.py  optimizations.py  trainer.py
tests/: test_configuration.py  test_decoder.py  test_encoder.py  test_encoder_extraction.py  test_evaluation.py  test_gpu_integration.py  test_optimizations.py  test_seq2seq_model.py  test_tokenization.py  test_tokenization_integration.py  test_training_execution.py  test_training_infra.py  test_ul2_pipeline.py  test_weight_initialization.py
